Mute terminal warning